--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.12.2",
-    "bootstrap": "^4.5.2",
-    "bootstrap-vue": "^2.17.3",
+    "bootstrap": "^5.0.0-beta1",
+    "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
     "nuxt": "^2.14.6"
   },
